--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link href="{{ url_for('static', filename='css/background.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='background.css') }}" rel="stylesheet">
 
 </head>
 
@@ -30,7 +30,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">제출</button>
             </form>
-            <script src="{{ url_for('static', filename='js/background.js') }}" > </script>
+            <script src="{{ url_for('static', filename='background.js') }}" > </script>
 
 </body>
 </html>
