--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-    <link href="{{ url_for('static', filename='css/background.css') }}" rel="stylesheet">
+    <title>The color of time</title>
+    <link href="{{ url_for('static', filename='background.css') }}" rel="stylesheet">
 
 </head>
 <body>
@@ -12,8 +12,11 @@
         <h1>Time</h1>
     </div>
     <div class="js-weather"></div>
+    {%if userName%}
+    <h2> Trust your self, {{userName}}</h2> 
+    {%endif%}
     <h2><a href="/register">GO</a></h2>
-
+    
     <script src="{{ url_for('static', filename='clock.js') }}" > </script>
     <script src="{{ url_for('static', filename='background.js') }}" > </script>
 
