--- a/templates/register.html
+++ b/templates/register.html
@@ -10,6 +10,7 @@
 
 <body>
         <h1>회원가입</h1>
+        <a href="#" onclick='window.open("login", "", "width=500, height=600", "")'>로그인</a>
             <form method="POST" >   
                 {{form.csrf_token}}
                 <div class="form-group">
