--- a/templates/chart.html
+++ b/templates/chart.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
-    <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet">
+    <!-- <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet"> -->
 
 <!-- CHART_JS -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
@@ -22,32 +22,11 @@
 
 </head>
 <body>
-    
-    <div class="js-clock">
-        <h1>Time</h1>
+    <div width = '300'>
+    <canvas id="myChart" width="400" height="400"></canvas>
     </div>
-    <div class="btn">
-    <button id = "Pbtn" onclick="plus()">Start PlusTime</button>
-    <button id = "Mbtn" onclick="minus()">Start MinusTime</button>
-    </div>
+    <!-- <script src="{{ url_for('static', filename='background.js') }}" > </script> -->
+    <script src="{{ url_for('static', filename='chart.js') }}" > </script>
 
-
-
-
-
-
-    <script>
-        var csrf_token = "{{ csrf_token() }}";
-        $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-        if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
-            xhr.setRequestHeader("X-CSRFToken", csrf_token);
-        }
-        }
-        });
-    </script>
-    <script src="{{ url_for('static', filename='background.js') }}" > </script>
-    <script src="{{ url_for('static', filename='timecheck.js') }}" > </script>
-    <script src="{{ url_for('static', filename='clock.js') }}" > </script>
 </body>
 </html>
