--- a/templates/time.html
+++ b/templates/time.html
@@ -5,12 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
-
     <!-- <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet"> -->
     <link href="{{ url_for('static', filename='timeline.css') }}" rel="stylesheet">
-
-
-
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
@@ -23,7 +19,11 @@
 
 </head>
 <body>
-    
+    <style>
+        body{
+            background-color: black;
+        }
+    </style>
     <div class="js-clock">
         <h1>Time</h1>
     </div>
