--- a/templates/login.html
+++ b/templates/login.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="{{ url_for('static', filename='login.css') }}" rel="stylesheet">
+    
 </head>
 <body>
-    <form method="POST" >   
+    <!-- <form method="POST" >   
         {{form.csrf_token}}
         <div class="form-group">
             {{form.userEmail(class="form-control", placeholder="Email")}}
@@ -18,7 +20,107 @@
 
         {% if form.password.errors %}
         <strong>{{form.password.errors.0}}</strong>
-        {%endif%}
+        {%endif%} -->
+        
+<div class="login-wrap">
+    <div class="login-html">
+{% if mode == "login" %}
+<input id="tab-1" type="radio" name="tab" class="sign-in" checked>
+<label for="tab-1" class="tab" ><a href="/user/login">로그인</a></label>
+<input id="tab-2" type="radio" name="tab" class="sign-up" >
+<label for="tab-2" class="tab" ><a href="/user/register">회원가입</a></label>
+{%endif%}
+
+{% if mode == "register" %}
+<input id="tab-1" type="radio" name="tab" class="sign-in" >
+<label for="tab-1" class="tab" ><a href="/user/login">로그인</a></label>
+<input id="tab-2" type="radio" name="tab" class="sign-up" checked>
+<label for="tab-2" class="tab" ><a href="/user/register">회원가입</a></label>
+{%endif%}
+
+       
+        <div class="login-form">
+                                {% if mode == "login" %}
+
+<form method="POST" >   
+{{form.csrf_token}}
+
+
+            <div class="sign-in-htm">
+                <div class="group">
+                    <label for="user" class="label">이메일</label>
+{{form.userEmail(class="form-control input",id="user", placeholder="Email")}}
+                    <!-- <input id="user" type="text" class="input"> -->
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">패스워드</label>
+{{form.password(class="form-control input",id="pass", placeholder="Password")}}
+
+{% if form.password.errors %}
+<strong>{{form.password.errors.0}}</strong>
+{%endif%}
+                    <!-- <input id="pass" type="password" class="input" data-type="password"> -->
+
+                </div>
+                <div class="group">
+                    <input id="check" type="checkbox" class="check" checked>
+                    <label for="check"><span class="icon"></span> Keep me Signed in</label>
+                </div>
+                <div class="group">
+                    <input type="submit" class="button" value="Sign In">
+                </div>
+                <div class="hr"></div>
+                <div class="foot-lnk">
+                    <a href="#forgot">Forgot Password?</a>
+                </div>
+            </div>
 </form>
+                                            {%endif%}
+                                            {% if mode == "register" %}
+<form method="POST" >   
+{{form.csrf_token}}
+            <div class="sign-up-htm">
+                <div class="group">
+                    <label for="user" class="label">Username</label>
+                    <!-- <input id="user" type="text" class="input"> -->
+{{form.userName(class="form-control", id="user", class="input" ,placeholder="user name")}}
+
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Password</label>
+{{form.password(class="form-control",  class="input" ,placeholder="password")}}
+
+                    <!-- <input id="pass" type="password" class="input" data-type="password"> -->
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Repeat Password</label>
+                    <!-- <input id="pass" type="password" class="input" data-type="password"> -->
+{{form.rePassword(class="form-control", class="input" ,placeholder="re-password")}}
+
+
+                </div>
+                <div class="group">
+                    
+                    <label for="pass" class="label">Email Address</label>
+                    <!-- <input id="pass" type="text" class="input"> -->
+{{form.userEmail(class="form-control input", class="input" ,id="user", placeholder="Email")}}
+                </div>
+                <div class="group">
+                    <input type="submit" class="button" value="Sign Up">
+                </div>
+</form>
+
+                <div class="hr"></div>
+                <div class="foot-lnk">
+                    <label for="tab-1">Already Member?</a>
+                </div>
+                                            {%endif%}
+
+            </div>
+        </div>
+    </div>
+</div>
+        
 </body>
 </html>
+
