--- a/templates/index.html
+++ b/templates/index.html
@@ -98,6 +98,9 @@ crossorigin="anonymous"></script>
     <!-- BALL -->
     <div class="ball" id=''></div><span class="shadow" id='' ></span>
     <!-- BALL -->
+
+        
+        <div id = 'timer'></div>
 <button id = "Pbtn" onclick="plus()">Start PlusTime</button>
 <button id = "Mbtn" onclick="minus()">Start MinusTime</button>
 </div>
