--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,12 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Color of time</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- CHART JS -->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
+
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -52,8 +55,8 @@ crossorigin="anonymous"></script>
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">Color of time</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/time">Time record</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Time record</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">asdfasdf</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/chart">chart</a></li>
 
@@ -66,21 +69,22 @@ crossorigin="anonymous"></script>
         {%if userName%}
         <h1> Hello, {{userName}}</h1>
         {%else%}
+        <script>alert("로그인이 필요합니다.")</script>
         <h1> GET LOGIN</h1>
         {%endif%}
-        <div class="js-clock">
-            <h1>Time</h1>
-        </div>
+        
     
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container d-flex h-100 align-items-center">
+<!-- <div class="container d-flex h-100 align-items-center"> -->
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Color of time</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">인지하지 못하는 사이, 무의미하게 흐르는 시간을 기록해보세요.</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="/register">Get start</a>
+                    <div class="js-clock">
+                        <h1 class="mx-auto my-0 text-uppercase">TIME</h1>
+                    </div>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">시간을 기록해보세요.</h2>
+                    <a class="btn btn-primary js-scroll-trigger" href="/user/register">Get start</a>
                 </div>
-            </div>
+<!-- </div> -->
         </header>
         <!-- About-->
         <section class="about-section text-center" id="about">
@@ -100,14 +104,15 @@ crossorigin="anonymous"></script>
     <!-- BALL -->
 
         
-        <div id = 'timer'></div>
-<button id = "Pbtn" onclick="plus()">Start PlusTime</button>
-<button id = "Mbtn" onclick="minus()">Start MinusTime</button>
+<div id = 'timer'></div>
+<button class="button button2"  id = "Pbtn" onclick="plus()">Start PlusTime</button>
+<button class="button button3" id = "Mbtn" onclick="minus()">Start MinusTime</button>
 </div>
 </div>
 <!-- c -->
                         <!-- <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p> -->
-                <img class="img-fluid" src="assets/img/ipad.png" alt="" />
+
+                <img class="img-fluid" src="{{ url_for('static', filename='images/ipad.png') }}" alt="" />
             </div>
         </section>
         <!-- Projects-->
@@ -115,7 +120,8 @@ crossorigin="anonymous"></script>
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="" /></div>
+                    
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="{{ url_for('static', filename='images/bg-masthead.jpg') }}" alt="" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Shoreline</h4>
@@ -124,8 +130,18 @@ crossorigin="anonymous"></script>
                     </div>
                 </div>
                 <!-- Project One Row-->
+<!-- CHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHART -->
+<input type="text" class="form-control" id="date"placeholder="DatePicker"/>
+<button type="button" class = "btn btn-primary" onclick="getChart();">loadChart</button>
+                <div width = '300'>
+                    <canvas id="myChart" width="400" height="400"></canvas>
+                    </div>
+<!-- CHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHARTCHART -->
+
+
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="" /></div>
+                    
+                    <div class="col-lg-6"><img class="img-fluid" src="{{ url_for('static', filename='images/demo-image-01.jpg') }}" alt="" /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -140,7 +156,8 @@ crossorigin="anonymous"></script>
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="" /></div>
+                    
+                    <div class="col-lg-6"><img class="img-fluid" src="{{ url_for('static', filename='images/demo-image-02.jpg') }}" alt="" /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -215,28 +232,21 @@ crossorigin="anonymous"></script>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<script>
+const body = document.querySelector("body");
+const image = new Image();
+image.src = `static/images/10.jpg`;
+image.classList.add("bgImage");
+body.appendChild(image);
+</script>
         <!-- yj JS/CSS -->
         <script src="{{ url_for('static', filename='clock.js') }}" > </script>
-        <script src="{{ url_for('static', filename='background.js') }}" > </script>
         <script src="{{ url_for('static', filename='timecheck.js') }}" > </script>
         <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet">
         <link href="{{ url_for('static', filename='ball.css') }}" rel="stylesheet">
         <link href="{{ url_for('static', filename='timeline.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='button.css') }}" rel="stylesheet">
+        <script src="{{ url_for('static', filename='chart.js') }}" > </script>
         
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
@@ -248,6 +258,7 @@ crossorigin="anonymous"></script>
         <!-- Core theme JS-->
         <!-- 원본 <script src="js/scripts.js"></script> -->
         <script src="{{ url_for('static', filename='scripts.js') }}" > </script>
+
 
     </body>
 </html>
