--- a/static/timeline.css
+++ b/static/timeline.css
@@ -1,27 +1,28 @@
  ::selection {
-	 background: #eee;
+	 /* background: green; */
 }
  .timeline {
 	 box-sizing: border-box;
-	 padding: 2rem 2rem 2rem 6rem;
+	 padding: 2rem 2rem 2rem 4.5rem;
      margin: 2rem auto;
-	 max-width: 800px;
+     max-width: 800px;
+     font-size : 1rem;
 	 /* background: #eee; */
 	 position: relative;
 }
  .timeline input[type="checkbox"] {
-     display:none;
+     display: none;
 	 position: absolute;
-	 opacity: 0.1;
+	 opacity: 0.5;
 }
  .timeline::before {
 	 content: '';
 	 position: absolute;
-	 left: 30px;
-	 width: 8px;
+	 left: 44px;
+	 width: 4px;
 	 top: 10px;
 	 bottom: 3rem;
-	 background-color: #48dbfb;
+	 background-color: #d1ccc0;
 	 display: inline-block;
 }
  .timeline section {
@@ -38,8 +39,7 @@
 	 opacity: 0.75;
 }
  .timeline section label .date {
-	 font-family: sans;
-	 font-size: 0.75rem;
+	 font-size: 0.9rem;
 	 font-weight: normal;
 	 display: block;
 	 text-transform: uppercase;
@@ -54,22 +54,22 @@
 	 display: inline-block;
 	 top: 0;
 	 left: calc(-2.5em - 1px);
-     width: 1.25em;
-     background-color: blue;
-	 height: 1.25em;
-	 box-shadow: 0 0 0 0.375em inset white, 2px 2px 2px rgba(0, 0, 0, 0.5);
+     width: 1.8em;
+     background-color: #1B1464;
+	 height: 1.8em;
+	 box-shadow: 0 0 0 0.375em inset #f7f1e3, 2px 2px 2px rgba(0, 0, 0, 0.5);
 	 transform: rotate(405deg);
-	 transition: all 0.2s;
+	 transition: all 2s;
 }
 .blueList{
-    color: blue;
+    color: #008CBA;
 }
 .redList{
-    color: red;
+    color: #f44336;
 }
  .timeline input:checked + section::before {
 	 transform: none;
-	 box-shadow: 0 0 0 0.375em inset white, 0px 2px 2px rgba(0, 0, 0, 0.5);
+	 box-shadow: 0 0 0 0.375em inset white, 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
  .timeline input:checked + section p {
 	 display: block;
