--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="{{ url_for('static', filename='login.css') }}" rel="stylesheet">
-    
+
+  <style>
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+.bgImage{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn 2s ;
+}
+
+body{
+    background-color: #636e72;
+}
+
+  </style>
 </head>
 <body>
     <!-- <form method="POST" >   
@@ -120,7 +144,13 @@
         </div>
     </div>
 </div>
-        
+<script>
+const body = document.querySelector("body");
+const image = new Image();
+image.src = `/../static/images/4.jpg`;
+image.classList.add("bgImage");
+body.appendChild(image);
+</script>
 </body>
 </html>
 
